# stereo-visual-odometry

./: .clang-format  .gitignore  .gitmodules  BackEnd.cpp  BackEnd.h  CMakeLists.txt  Camera.cpp  Camera.h  Feature.cpp  Feature.h  Frame.cpp  Frame.h  FrontEnd.cpp  FrontEnd.h  Map.cpp  Map.h  MapPoint.cpp  MapPoint.h  Visual_odometry.cpp  Visual_odometry.h  config.h  g2o_types.h  readme.md  viewer.cpp  viewer.h  vo.cpp
data/sample/00/: result.txt  times.txt
include/: BackEnd.h  Camera.h  Feature.h  Frame.h  FrontEnd.h  Map.h  MapPoint.h  Visual_odometry.h  config.h  g2o_types.h  viewer.h
include/dataset/: data_reader.h
include/stereo_visual_odometry/io/: data_reader.h  data_reader.hpp
include/stereo_visual_odometry/types/: feature.hpp  frame.hpp  map.hpp  map_point.hpp
include/stereo_visual_odometry/visualization/: map_visualizer.hpp
results/: lists.txt  result_fast.txt  result_gftt.txt
scripts/: visualize_result.py
src/: BackEnd.cpp  Camera.cpp  Feature.cpp  Frame.cpp  FrontEnd.cpp  Map.cpp  MapPoint.cpp  Visual_odometry.cpp  viewer.cpp
src/dataset/: data_reader.cpp
src/io/: data_reader.cc
src/types/: frame.cc
stereo_visual_odometry/: CMakeLists.txt
stereo_visual_odometry/include/stereo_visual_odometry/io/: data_reader.h
stereo_visual_odometry/src/io/: data_reader.cc
test/: run_all_tests.cpp  test_all.cpp  test_dataset_reader.hpp  test_image_reader.cpp  test_image_reader.hpp  test_map_visualizer.hpp
